# tiny-pl-nondet

./: tiny-pl-nondet.cabal
app/: Main.hs
grammar/: Syntax.cf
src/Tiny/: Semant.hs
src/Tiny/Syntax/: AbsSyntax.hs  DocSyntax.txt  LexSyntax.x  ParSyntax.y  PrintSyntax.hs  SkelSyntax.hs  TestSyntax.hs
tests/: grasshopper.tpl  pow.tpl  roots.tpl  sat.tpl  simple.tpl  simple_union.tpl
