cabal-version:      3.4
name:               tiny-pl-nondet
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Nikolay Rulev
maintainer:         nikolayr2001@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tiny-pl-nondet
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , tiny-pl-nondet
    hs-source-dirs:   app
    default-language: GHC2021

library
    import:           warnings
    other-modules:
        Tiny.Syntax.AbsSyntax
        Tiny.Syntax.PrintSyntax
        Tiny.Semant
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , text
      , containers

    hs-source-dirs:   src
    default-language: GHC2021
